lessons/04/elk/log-app-with-filebeat-sidecar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-app-with-filebeat-sidecar
  labels:
    name: log-app-with-filebeat-sidecar
spec:
  replicas: 1
  selector:
    matchLabels:
      name: log-app
  template:
    metadata:
      labels:
        name: log-app
    spec:
      containers:
      - name: log-app
        image: sladesoftware/log-application:latest
        volumeMounts:
        - name: log-output
          mountPath: /tmp/
      - name: filebeat-sidecar
        image: elastic/filebeat:8.1.0
        args: [
          "-c", "/etc/filebeat/filebeat.yaml",
           "-e"
        ]
        volumeMounts:
        - name: log-output
          mountPath: /tmp/
        - name: beat-config
          mountPath: /etc/filebeat/
      volumes:
      - name: log-output
        emptyDir: {}
      - name: beat-config
        configMap:
          name: beat-config
          items:
          - key: filebeat.yaml
            path: filebeat.yaml
