lessons/04/elk/elasticsearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es
  labels:
    name: es
spec:
  replicas: 1
  selector:
    matchLabels:
      name: es
  template:
    metadata:
      labels:
        name: es
    spec:
      containers:
      - name: es
        image: elasticsearch:8.1.0
        ports:
        - containerPort: 9200
          name: http
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: es
  name: es
spec:
  selector:
    name: es
  ports:
    - port: 9200
      protocol: TCP
      targetPort: 9200
