lessons/04/elk/kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      name: kibana
  template:
    metadata:
      labels:
         name: kibana
    spec:
      containers:
        - name: kibana
          image: kibana:8.1.0
          ports:
          - containerPort: 5601
            name: http
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    name: kibana
spec:
  selector:
    name: kibana
  ports:
    - port: 5601
      protocol: TCP
      targetPort: 5601
