lessons/04/elk/logstash.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  labels:
    name: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      name: logstash
  template:
    metadata:
      labels:
        name: logstash
    spec:
      containers:
        - name: logstash
          image: logstash:7.17.0
          ports:
          - containerPort: 5044
            name: filebeat
          volumeMounts:
          - name: logstash-pipeline
            mountPath: /usr/share/logstash/pipeline/
          command:
            - logstash
      volumes:
        - name: logstash-pipeline
          configMap:
            name: logstash-pipeline
            items:
              - key: logstash.conf
                path: logstash.conf
---
apiVersion: v1
kind: Service
metadata:
  name: logstash
  labels:
    name: logstash
spec:
  selector:
    name: logstash
  ports:
  - port: 5044
    protocol: TCP
    targetPort: 5044
